--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,45 @@ body{
     padding-top: 40px;
     
 }
+
+.sbTitle{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 27px;
+    color: white;
+}
+
+.contactSection{
+    margin: 50px 0 47px 40px;
+}
+.contactSectionType{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
+.contactSectionLink{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    opacity: 0.5;
+    text-decoration: none;
+    margin-left: 10px ;
+}
+.tsList{
+    padding: 0 0 0 17px;
+}
+.tsItem{
+    color:#FB6D3A;
+
+}
+.tsText{
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
